@@ -15,7 +15,7 @@
 	
 	<script type="text/javascript" charset="utf-8">
 		$(document).ready(function() {
-			$('body').polypage();
+			$('body').polypage([]);
 		});
 	</script>
 	
