@@ -26,6 +26,7 @@
 		
 		options: {
 		  prefix: 'pp',
+		  separator: '_',
 		  label: "Page States:"
 		},
 
@@ -37,6 +38,10 @@
 			this.setStartValues(defaults);
 			this.refresh();
 		},
+		
+		separated: function(val) {
+		  return this.options.separator+val+this.options.separator
+		},
 
 		setStartValues: function(initValues){
 			if(initValues) {
@@ -44,7 +49,7 @@
 				  this.setState(initValues[i],true);
 				}
 			};
-			var hashValues = window.location.hash.replace(/^#/,'').split(/_and_/);
+			var hashValues = window.location.hash.replace(/^#/,'').split(new RegExp(this.separated('and')));
 			for(var i in hashValues) {
 				this.setState(hashValues[i],true);
 			}
@@ -56,7 +61,7 @@
 			this.states = {};
 			el.each(function() {
 				var s = self.extractDataFromClassName($(this).attr('class'));
-				var states = s.split(/_?not_|_or_|_and_/);
+				var states = s.split(new RegExp(self.separated('?not')+'|'+self.separated('or')+'|'+self.separated('and')));
 				for(var state in states) {
 					if(self.states[states[state]]==undefined && states[state]!='') {
 						if($.cookie()){ 
@@ -80,14 +85,14 @@
 		extractDataFromClassName: function(className){
 			var classes = className.split(' ');
 			for(var i in classes) {
-			  var matcher = new RegExp('^'+this.options.prefix+'_');
+			  var matcher = new RegExp('^'+this.options.prefix+this.options.separator);
 			  if(matcher.test(classes[i])) return classes[i].replace(matcher,'');
 			}
 			return '';
 		},
 
 		findAll: function(){
-			return $("*[class*='"+this.options.prefix+"_']");
+			return $("*[class*='"+this.options.prefix+this.options.separator+"']");
 		},
 		
 		pageHasPPElements: function() {
@@ -112,10 +117,10 @@
 
 		evaluate: function(input){
 			var str = input
-			.replace(/_and_/gi,' && ')
-			.replace(/_or_/gi,' || ')
-			.replace(/_?not_/gi,' !')
-			.replace(/([a-z_0-9]+)/gi,"this.states['$1']");
+			.replace(new RegExp(this.separated('and'),'gi'),' && ')
+			.replace(new RegExp(this.separated('or'),'gi'),' || ')
+			.replace(new RegExp(this.separated('?not'),'gi'),' !')
+			.replace(/([a-z_0-9\-]+)/gi,"this.states['$1']");
 			return eval(str);
 		},
 
@@ -154,7 +159,7 @@
 				var state = alphaStates[index]
 				var val = this.states[state];
 
-				$('#pp_options ul').append('<li><a href="#'+state+'" id="pp_state_switch_'+state+'">'+state.replace(/_/,' ')+'</a></li>');
+				$('#pp_options ul').append('<li><a href="#'+state+'" id="pp_state_switch_'+state+'">'+state.replace(this.options.separator,' ')+'</a></li>');
         var stateSwitch = $('#pp_state_switch_'+state);
         
         if($.cookie() && $.cookie(state) != null) {
